@@ -586,6 +586,7 @@ $pgv_lang["lang_name_polish"]			= "Polnisch";
 $pgv_lang["lang_name_portuguese"]		= "Portugiesisch";
 $pgv_lang["lang_name_romanian"]			= "Rumänisch";
 $pgv_lang["lang_name_russian"]			= "Russisch";
+$pgv_lang["lang_name_serbian-la"]		= "Serbisch (Lateinische Buchstaben)";
 $pgv_lang["lang_name_slovak"]			= "Slowakisch";
 $pgv_lang["lang_name_slovenian"]		= "Slowenisch";
 $pgv_lang["lang_name_spanish"]			= "Spanisch";
