@@ -583,8 +583,9 @@ $pgv_lang["lang_name_polish"]		= "Polish";
 $pgv_lang["lang_name_portuguese"]	= "Portuguese";
 $pgv_lang["lang_name_romanian"]		= "Romanian";
 $pgv_lang["lang_name_russian"]		= "Russian";
+$pgv_lang["lang_name_serbian-la"]	= "Serbian (Latin alphabet)";
 $pgv_lang["lang_name_slovak"]		= "Slovak";
-$pgv_lang["lang_name_slovenian"] = "Slovenian";
+$pgv_lang["lang_name_slovenian"]	= "Slovenian";
 $pgv_lang["lang_name_spanish"]		= "Spanish";
 $pgv_lang["lang_name_spanish-ar"]	= "Spanish (Latin America)";
 $pgv_lang["lang_name_swedish"]		= "Swedish";
